--- a/.github/workflows/feature_pipeline.yaml
+++ b/.github/workflows/feature_pipeline.yaml
@@ -22,5 +22,5 @@ jobs:
       - name: Execute Python workflow from bash script
         env:
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
-        run: python -m jupyter nbconvert --execute --to html notebooks/12_feature_pipeline.ipynb
+        run: python -m feature_pipeline.py
 
