--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-hopsworks
-jupyter
-pandas
-pyarrow
-tqdm
-plotly
-scikit-learn
-xgboost
-optuna
-python-dotenv
-matplotlib
-chardet
-charset-normalizer
-numpy
-streamlit
-geopandas
-lightgbm
-python-dotenv
-hsfs==3.7.1
+hopsworks>=3.7.0,<4.0.0
+jupyter>=1.0.0,<2.0.0
+pandas<2.2.0
+pyarrow>=15.0.2,<16.0.0
+tqdm>=4.66.2,<5.0.0
+plotly>=5.20.0,<6.0.0
+scikit-learn>=1.4.2,<2.0.0
+xgboost>=2.0.3,<3.0.0
+optuna>=3.6.1,<4.0.0
+python-dotenv>=1.0.1,<2.0.0
+matplotlib>=3.8.4,<4.0.0
+chardet>=5.2.0,<6.0.0
+charset-normalizer>=3.3.2,<4.0.0
+numpy>=1.26.4,<2.0.0
+streamlit>=1.36.0,<2.0.0
+geopandas>=1.0.1,<2.0.0
+lightgbm==4.1.0
